# prog-5-ussd

./: CMakeLists.txt  License.txt  README.md
.github/workflows/: aur-publish.yml  ci.yml
.templates/: PKGBUILD.in  create-release.sh.in  install.sh.in  ussdConfig.hpp.in
include/ussd/: option.hpp  ussd.hpp  ussdConfig.hpp
sources/: CMakeLists.txt  main.cpp  option.cpp  option.hpp  root.cpp  root.hpp  special.cpp  special.hpp  static_options.cpp  static_options.hpp  ussd.cpp  utils.cpp  utils.hpp
